--- a/app/src/main/res/layout/activity_taccounts.xml
+++ b/app/src/main/res/layout/activity_taccounts.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:background="@color/green">
 
         <LinearLayout
@@ -59,20 +59,11 @@
     </LinearLayout>
 
     <ListView
+        android:id="@+id/listViewEconomy"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/listViewEconomy">
+        android:layout_height="match_parent">
 
     </ListView>
-
-
-
-
-
-
-
-
-
 
 
 </LinearLayout>
