--- a/app/src/main/res/layout/activity_taccounts.xml
+++ b/app/src/main/res/layout/activity_taccounts.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:background="@color/green">
 
         <LinearLayout
