--- a/app/src/main/res/layout/activity_feelings.xml
+++ b/app/src/main/res/layout/activity_feelings.xml
@@ -10,9 +10,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-
+        android:orientation="vertical"
+        android:layout_marginTop="300dp"
+        android:layout_marginBottom="200dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -28,6 +28,8 @@
             android:id="@+id/btn_save_feeling"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:text="@string/btnSave" />
 
 
