--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,12 @@
     tools:context=".MainActivity"
     android:id="@+id/main_menu">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/main_menu_img_bg"
+        android:src="@drawable/bg_vitruvio"/>
+
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
