--- a/app/src/main/res/layout/activity_dream_diary.xml
+++ b/app/src/main/res/layout/activity_dream_diary.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Personal_diary"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".Dream_diary">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,7 +30,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="10dp"
-            android:hint="@string/lbl_help_insert_title_dream" />
+            android:hint="@string/lbl_help_insert_keyword" />
 
     </LinearLayout>
 
@@ -63,7 +65,4 @@
         android:gravity="top"
         android:hint="@string/lbl_help_insert_dream"/>
 
-
-
-
-</LinearLayout>
+  </LinearLayout>
