--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -87,12 +87,13 @@
                     android:layout_marginBottom="20dp"/>
 
                 <EditText
+                    android:id="@+id/txtUsername"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="60dp"
                     android:layout_marginRight="60dp"
                     android:layout_marginBottom="90dp"
-                    android:hint="username"/>
+                    android:hint="username" />
 
                 <Button
                     android:id="@+id/btnCreateNickName"
@@ -117,12 +118,13 @@
                 android:id="@+id/registerPage2">
 
                 <ImageView
-                    android:layout_marginTop="40dp"
-                    android:layout_marginBottom="40dp"
+                    android:id="@+id/sex_avatar"
                     android:layout_width="200dp"
                     android:layout_height="200dp"
                     android:layout_gravity="center"
-                    android:background="@drawable/avatar_uwu"/>
+                    android:layout_marginTop="40dp"
+                    android:layout_marginBottom="40dp"
+                    android:background="@drawable/avatar_uwu" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -157,6 +159,7 @@
                 </LinearLayout>
 
                 <TextView
+                    android:id="@+id/lblYeartToBirth"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
