--- a/app/src/main/res/layout/activity_dream_diary.xml
+++ b/app/src/main/res/layout/activity_dream_diary.xml
@@ -5,6 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="15dp"
+    android:layout_marginRight="15dp"
     android:orientation="vertical"
     tools:context=".Dream_diary">
 
