--- a/app/src/main/res/layout/activity_feelings.xml
+++ b/app/src/main/res/layout/activity_feelings.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_marginLeft="15dp"
+    android:layout_marginRight="15dp"
     tools:context=".Feelings">
 
     <LinearLayout
