try to save time diary incersions, problems with garbage colector delete elemetns not see in screem

--- a/app/src/main/res/layout/activity_time_distribution.xml
+++ b/app/src/main/res/layout/activity_time_distribution.xml
@@ -27,6 +27,7 @@
             android:text="@string/app_activity" />
 
         <Button
+            android:id="@+id/saveDiaryActivities"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:shadowColor="@color/blue"
