--- a/app/src/main/res/layout/activity_feelings.xml
+++ b/app/src/main/res/layout/activity_feelings.xml
@@ -16,11 +16,13 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:text="@string/app_banner_feelings"/>
 
         <Spinner
             android:id="@+id/spinnerFeelings"
             android:layout_width="match_parent"
+            android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"/>
 
         <Button
