--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -50,6 +50,12 @@
             android:layout_height="wrap_content"
             android:text="@string/btnEditDrugList"/>
 
+        <Button
+            android:id="@+id/btnSettingsPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="PASSWORD"/>
+
 
     </LinearLayout>
     </ScrollView>
