--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,10 @@
     android:id="@+id/main_menu">
 
     <ImageView
+        android:id="@+id/main_menu_img_bg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/main_menu_img_bg"
+        android:foregroundGravity="center"
         android:src="@drawable/bg_vitruvio"/>
 
     <ScrollView
