--- a/app/src/main/res/layout/activity_box_economy.xml
+++ b/app/src/main/res/layout/activity_box_economy.xml
@@ -4,7 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
     tools:context=".BoxEconomy">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/lbl_box_help_banner"
+        android:layout_marginBottom="20dp"/>
 
 
     <LinearLayout
