--- a/app/src/main/res/layout/activity_dream_diary.xml
+++ b/app/src/main/res/layout/activity_dream_diary.xml
@@ -2,14 +2,19 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="10dp"
     android:layout_marginLeft="15dp"
     android:layout_marginRight="15dp"
     android:orientation="vertical"
     tools:context=".DreamDiary">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="@string/lbl_help_dream_diary_banner"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,6 +33,7 @@
 
         <EditText
             android:id="@+id/txtInsertTitleDreamDiary"
+            android:inputType="textImeMultiLine"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
