--- a/app/src/main/res/layout/activity_feelings_configure.xml
+++ b/app/src/main/res/layout/activity_feelings_configure.xml
@@ -4,11 +4,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
     tools:context=".FeelingsConfigure">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/lbl_help_banner_list_of_feelings"
+            android:layout_marginBottom="20dp"/>
 
         <TextView
             android:layout_width="match_parent"
